...
    }
    return Scaffold(
      appBar: AppBar(
        title: Text('Todo Details'),
        actions: [
          IconButton(
            key: Key('deleteButton'),
            icon: Icon(Icons.delete),
            onPressed: () {
              bloc.delete(todo.id);
              Navigator.pop(context);
            },
          )
...
