...
                  : TodoStatsView(list: _manager);
            }
            return Center(child: CircularProgressIndicator());
          }),
//Todoリストの追加ボタン
      floatingActionButton: FloatingActionButton(
        key: Key('addButton'),
        onPressed: () {
          Navigator.push(
              context,
              MaterialPageRoute(
                  builder: (context) =>
                      TodoAddView(todo: Todo.newTodo(), bloc: _bloc)));
...
